fix blurriness

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,7 +32,7 @@ body {
 }
 
 .header {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgb(231, 231, 231);
   /* backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px); */
   color: #1e1e1e;
